--- a/chamber/index.html
+++ b/chamber/index.html
@@ -56,7 +56,7 @@
             </div>
         </section>
     </header>
-    <main id= "bg-semi-transparent" class= "main-content">
+    <main class= "main-content">
         <h1>Satatoga Chamber of Commerce </h1>
         <section class="events"> 
             <h2>Current Events</h2>
