--- a/.vscode/gardensomething/site-plan.html
+++ b/.vscode/gardensomething/site-plan.html
@@ -89,7 +89,7 @@
                 Font Family "Barlow", sans-serif
             </p>
         </section> 
-        <section class="wireframes">
+        <section class="wireframe">
             <h2>wireframes</h2>
             <img src="images/wireframe.png" alt="chamber-desktop-wireframe">
         </section> 
