site-plan name correction

--- a/.vscode/gardensomething/site-plan.html
+++ b/.vscode/gardensomething/site-plan.html
@@ -7,15 +7,15 @@
     <meta property="og:title" content="Garden Something">
     <meta property="og:type" content="website">
     <meta property="og:image" content="#"> <!-- Placeholder for an image URL -->
-    <meta property="og:url" content="https://katdenney.github.io/wdd231/gardensomething/site_plan.html"> <!-- URL of the page -->
+    <meta property="og:url" content="https://katdenney.github.io/wdd231/gardensomething/site-plan.html"> <!-- URL of the page -->
 
     <meta name="description" content="This is the site plan for katlin denney's project website."> <!-- Description of the page -->
     <meta name="author" content="Katlin Christine Denney"> <!-- Hi I'm the author -->
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest"><!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon_io/site.webmanifest"><!-- favicon -->
     <title>Site Plan</title>
     <script src="scripts/date.js" defer></script>
     <script src="scripts/script.js" defer></script>
