cards and visited working

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -44,11 +44,14 @@
             </nav>
         </section>
     </header>
-    <main class= "main-content2">
+    <main class= "discover-main">
         <h1>Discover Satatoga </h1>
+        <section 
+            class="cards-container">
+        </section>
+        
         <section>
-            <h2>Discover</h2>
-            <p>Events in the Saratoga area</p>
+            <aside id="visit-message"></aside>
         </section>
         <section> 
 
@@ -79,5 +82,6 @@
 
 
     </footer>
+    <script src="scripts/discover.js" type="module"></script>
 </body>
 </html>
