--- a/chamber/join.html
+++ b/chamber/join.html
@@ -25,6 +25,9 @@
 
     <link rel="stylesheet" href="styles/normalize.css"> <!-- Normalize CSS for consistent styling across browsers -->
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/small.css" media="screen and (max-width: 640px)">
+    <link rel="stylesheet" href="styles/medium.css" media="screen and (min-width: 641px) and (max-width: 1024px)">
+    <link rel="stylesheet" href="styles/large.css" media="screen and (min-width: 1025px)">
 
 </head>
 <body>
@@ -45,7 +48,7 @@
             </nav>
         </section>
     </header>
-    <main class= "main-content">
+    <main class= "main-content2">
         <h2>Become a Member</h2>
         <section class="section-content">
             <!--non-profit-->
