did this fix the error in html?

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -32,12 +32,13 @@
 
 </head>
 <body>
-    <!-- preload hero -->
+    <!-- preload hero and logo -->
     <link rel="preload" as="image" href="images/herosaratoga.avif">
+    <link rel="preload" as="image" href="images/logo.avif">
     <header>
         <section class="top-header">
             <h1>Discover</h1>
-            <img src="images/logo.avif" alt="Saratoga Chamber of Commerce Logo" max-width="200" max-height="200" class="logo">
+            <img src="images/logo.avif" alt="Saratoga Chamber of Commerce Logo" class="logo">
             <button id="menu-toggle" aria-label="Toggle menu">
                 &#9776;    
             </button>
