as good as im getting it i think

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -48,9 +48,9 @@
             </nav>
         </section>
     </header>
-    <main class= "main-content2">
+    <main class= "join-section">
         <h2>Become a Member</h2>
-        <section class="section-content">
+        <section class="membership-content">
             <!--non-profit-->
             <div class="membership-card">
                 <h3>Non-profit Membership</h3>
@@ -97,7 +97,7 @@
                 <button onclick="document.getElementById('gold-modal').close()">Close</button>
             </dialog>
         </section>
-        <section class="join-section"> 
+        <section class="form-section"> 
             <h2>Tell us about yourself</h2>
             <form id="form" method= "get" action="thankyou.html">
                 <label>First Name:
@@ -141,7 +141,6 @@
                 <input type="submit" value="Join Us"><br>
             </form>
         </section>
-            
     </main>
     <footer class="foot-container">
         <div>
