getting late need to push what i've got

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Discover the Saratoga Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="#"> <!-- Placeholder for an image URL -->
-    <meta property="og:url" content="https://katdenney.github.io/wdd231/index.html"> <!-- URL of the page -->
+    <meta property="og:url" content="https://katdenney.github.io/wdd231/chamber/discover.html"> <!-- URL of the page -->
 
     <meta name="description" content="The Discover page for the Saratoga Chamber of Commerce website."> <!-- Description of the page -->
     <meta name="author" content="Katlin Christine Denney"> <!-- Hi I'm the author -->
