--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Saratoga Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://github.com/katdenney/wdd231/blob/main/chamber/images/home.jpeg">
-    <meta property="og:url" content="https://katdenney.github.io/wdd231/index.html"> <!-- URL of the page -->
+    <meta property="og:url" content="https://katdenney.github.io/wdd231/chamber/index.html"> <!-- URL of the page -->
 
     <meta name="description" content="This is the homepage for the Saratoga Chamber of Commerce website."> <!-- Description of the page -->
     <meta name="author" content="Katlin Christine Denney"> <!-- Hi I'm the author -->
