review this tomorrow. double check things

--- a/gardensomething/companies.html
+++ b/gardensomething/companies.html
@@ -58,9 +58,9 @@
                 </nav>
             </section>
             <section class="hero">
-                <img src="images/yellowdafhero.webp" alt="hero image of flowers">
                 <h1>Get to know our friends</h1>
-                <div>
+                <img src="images/yellowdafhero.webp" alt="hero image of flowers">
+                <div class="hero-text">
                     <aside id="visit-message"></aside>
                 </div>
             </section>
