--- a/gardensomething/seeds.html
+++ b/gardensomething/seeds.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="images/favicon_io/site.webmanifest"><!-- favicon -->
-    <title>Saratoga Chamber of Commerce Directory Page</title>
+    <title>Seeds and Zones</title>
 
     <script src="scripts/date.js" defer></script> <!-- JavaScript file for the date in the footer -->
     <script src="scripts/menutog.js" defer></script> <!--hamburger--> 
@@ -40,8 +40,8 @@
     <div class="page-wrapper">
         <header>
             <section class="top-header"> 
-                <h1>Directory</h1>
-                <img src="images/logo.avif" alt="Saratoga Chamber of Commerce Logo" class="logo">
+                <h1>Seed Directory</h1>
+                <img src="images/logo.webp" alt="Garden Something Logo" class="logo">
                 <button id="menu-toggle" aria-label="Toggle menu">
                     &#9776;
                 </button>
