--- a/gardensomething/index.html
+++ b/gardensomething/index.html
@@ -43,6 +43,7 @@
     <div class="page-wrapper">
         <!-- preload hero 1920x1080 web 800x1200 pixels mobile-->
         <link rel="preload" as="image" href="images/yellowdafhero.webp">
+        <link rel="preload" as="image" href="images/logo.webp">
         <header>
             <section class="top-header">
                 <h1>Garden Something</h1>
@@ -64,7 +65,6 @@
                 <h1>Welcome to Garden Something</h1>
                 <img src="images/yellowdafhero.webp" alt="Welcome to Saratoga Chamber of Commerce">
                 <div class="hero-text">
-                    
                     <p>Supporting heirloom and organic growers.</p>
                     <a href="request.html" class="hero-button">Get a Quote</a>
                 </div>
