--- a/gardensomething/request.html
+++ b/gardensomething/request.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="images/favicon_io/site.webmanifest"><!-- favicon -->
-    <title>Join the Saratoga Chamber of Commerce</title>
+    <title>Request a quote</title>
 
     <script src="scripts/date.js" defer></script> <!--date for footer -->
     <script src="scripts/menutog.js" defer></script> <!-- toggle for nav menu hamburger -->
