--- a/gardensomething/index.html
+++ b/gardensomething/index.html
@@ -21,9 +21,8 @@
 
     <script src="scripts/date.js" defer></script> <!--date for footer -->
     <script src="scripts/menutog.js" defer></script> <!-- toggle for nav menu hamburger -->
-    <!--unused yet js*******************************-->
-    <script src="scripts/spotlight.js" defer></script> 
-    <script src="scripts/weather.js" defer></script> 
+    <script src="scripts/spotlight.js" defer></script> <!--spotlight -->
+    <script src="scripts/weather.js" defer></script> <!--weather -->
     
    
 
