--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/normalize.css"> <!-- Normalize CSS for consistent styling across browsers -->
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/small.css" media="screen and (max-width: 640px)">
     <link rel="stylesheet" href="styles/medium.css" media="screen and (min-width: 641px) and (max-width: 1024px)">
     <link rel="stylesheet" href="styles/large.css" media="screen and (min-width: 1025px)">
