still where I want things

--- a/gardensomething/index.html
+++ b/gardensomething/index.html
@@ -45,12 +45,12 @@
         <link rel="preload" as="image" href="images/logo.webp">
         <header>
             <section class="top-header">
-                <h1>Garden Something</h1>
+                <h1 class="center-header">Garden Something</h1>
                 <img src="images/logo.webp" alt="Grow Something Logo" class="logo">
                 <button id="menu-toggle" aria-label="Toggle menu">
                     &#9776;    
                 </button>
-                <nav>
+                <nav class="center-header">
                     <ul id="menu">
                         <li><a href="https://katdenney.github.io/wdd231/gardensomething/index.html" class="active">Home</a></li>
                         <li><a href="https://katdenney.github.io/wdd231/gardensomething/companies.html">Companies</a></li>
