adding nav class to pages

--- a/gardensomething/request.html
+++ b/gardensomething/request.html
@@ -43,7 +43,7 @@
                 <button id="menu-toggle" aria-label="Toggle menu">
                     &#9776;
                 </button>
-                <nav>
+                <nav class="center-header">
                     <ul id="menu">
                         <li><a href="https://katdenney.github.io/wdd231/gardensomething/index.html">Home</a></li>
                         <li><a href="https://katdenney.github.io/wdd231/gardensomething/companies.html">Companies</a></li>
