--- a/gardensomething/companies.html
+++ b/gardensomething/companies.html
@@ -47,7 +47,7 @@
                 <button id="menu-toggle" aria-label="Toggle menu">
                     &#9776;    
                 </button>
-                <nav>
+                <nav class="center-header">
                     <ul id="menu">
                         <li><a href="https://katdenney.github.io/wdd231/gardensomething/index.html">Home</a></li>
                         <li><a href="https://katdenney.github.io/wdd231/gardensomething/companies.html" class="active">Companies</a></li>
