good so far. now getting into changing the js

--- a/gardensomething/companies.html
+++ b/gardensomething/companies.html
@@ -42,7 +42,7 @@
         <link rel="preload" as="image" href="images/logo.webp">
         <header>
             <section class="top-header">
-                <h1>Companies</h1>
+                <h1 class="center-header">Companies</h1>
                 <img src="images/logo.webp" alt="Garden Something Logo" class="logo">
                 <button id="menu-toggle" aria-label="Toggle menu">
                     &#9776;    
