--- a/gardensomething/request.html
+++ b/gardensomething/request.html
@@ -38,7 +38,7 @@
     <div class="page-wrapper">
         <header>
             <section class="top-header">
-                <h1>Request a quote from Garden Something</h1>
+                <h1 class="center-header">Request a quote from Garden Something</h1>
                 <img src="images/logo.webp" alt="Garden Something Logo" class="logo">
                 <button id="menu-toggle" aria-label="Toggle menu">
                     &#9776;
