--- a/gardensomething/seeds.html
+++ b/gardensomething/seeds.html
@@ -40,7 +40,7 @@
     <div class="page-wrapper">
         <header>
             <section class="top-header"> 
-                <h1>Seed Directory</h1>
+                <h1 class="center-header">Seed Directory</h1>
                 <img src="images/logo.webp" alt="Garden Something Logo" class="logo">
                 <button id="menu-toggle" aria-label="Toggle menu">
                     &#9776;
