--- a/gardensomething/index.html
+++ b/gardensomething/index.html
@@ -56,7 +56,7 @@
                         <li><a href="https://katdenney.github.io/wdd231/gardensomething/companies.html">Companies</a></li>
                         <li><a href="https://katdenney.github.io/wdd231/gardensomething/seeds.html">Seeds</a></li>
                         <li><a href="https://katdenney.github.io/wdd231/gardensomething/request.html">Request</a></li>
-                        <li><a href="https://katdenney.github.io/wdd231/gardensomething/site_plan.html">Site Plan</a></li>
+                        <li><a href="https://katdenney.github.io/wdd231/gardensomething/site-plan.html">Site Plan</a></li>
                     </ul> 
                 </nav>
             </section>
@@ -83,6 +83,7 @@
             </section>
             <section class= weather id="weather-section"> 
                 <h2>Weather</h2>
+                <p>This should display your weather from your current location.</p>
                 <div id="current-weather"></div>
                 <h2>3-Day Forecast</h2>
                 <div id="three-day-forecast" class="forecast-grid"></div>
