update company img

--- a/gardensomething/companies.html
+++ b/gardensomething/companies.html
@@ -38,7 +38,7 @@
 <body>
     <div class="page-wrapper">
         <!-- preload hero and logo -->
-        <link rel="preload" as="image" href="images/yellowdafhero.webp">
+        <link rel="preload" as="image" href="images/redhero.webp">
         <link rel="preload" as="image" href="images/logo.webp">
         <header>
             <section class="top-header">
@@ -59,7 +59,7 @@
             </section>
             <section class="hero">
                 <h1>Get to know our friends</h1>
-                <img src="images/yellowdafhero.webp" alt="hero image of flowers">
+                <img src="images/redhero.webp" alt="hero image of flowers">
                 <div class="hero-text">
                     <aside id="visit-message"></aside>
                 </div>
