--- a/gardensomething/request.html
+++ b/gardensomething/request.html
@@ -36,6 +36,9 @@
 </head>
 <body>
     <div class="page-wrapper">
+        <!-- preload hero and logo -->
+        <link rel="preload" as="image" href="images/pinkhero.webp">
+        <link rel="preload" as="image" href="images/logo.webp">
         <header>
             <section class="top-header">
                 <h1 class="center-header">Request a quote from Garden Something</h1>
@@ -52,6 +55,12 @@
                         <li><a href="https://katdenney.github.io/wdd231/gardensomething/site-plan.html">Site Plan</a></li>
                     </ul> 
                 </nav>
+            </section>
+            <section class="hero">
+                <h1>Get to know our friends</h1>
+                <img src="images/pinkhero.webp" alt="hero image of flowers">
+                <div class="hero-text">
+                </div>
             </section>
         </header>
         <!--MOVE THIS TOMORROW WHERE IT MAKES SENSE?-->
