--- a/gardensomething/seeds.html
+++ b/gardensomething/seeds.html
@@ -38,6 +38,9 @@
 </head>
 <body>
     <div class="page-wrapper">
+        <!-- preload hero and logo -->
+        <link rel="preload" as="image" href="images/seedhero.webp">
+        <link rel="preload" as="image" href="images/logo.webp">
         <header>
             <section class="top-header"> 
                 <h1 class="center-header">Seed Directory</h1>
@@ -54,6 +57,12 @@
                         <li><a href="https://katdenney.github.io/wdd231/gardensomething/site-plan.html">Site Plan</a></li>
                     </ul>  
                 </nav>
+            </section>
+            <section class="hero">
+                <h1>Get to know our friends</h1>
+                <img src="images/seedhero.webp" alt="hero image of flowers">
+                <div class="hero-text">
+                </div>
             </section>
         </header>
         <main class="main-content2">
