--- a/gardensomething/request.html
+++ b/gardensomething/request.html
@@ -57,7 +57,7 @@
                 </nav>
             </section>
             <section class="hero">
-                <h1>Get to know our friends</h1>
+                <h1>Let us build you a garden</h1>
                 <img src="images/pinkhero.webp" alt="hero image of flowers">
                 <div class="hero-text">
                 </div>
