--- a/gardensomething/seeds.html
+++ b/gardensomething/seeds.html
@@ -59,7 +59,7 @@
                 </nav>
             </section>
             <section class="hero">
-                <h1>Get to know our friends</h1>
+                <h1>Let's help you find the right plants for your zone.</h1>
                 <img src="images/seedhero.webp" alt="hero image of flowers">
                 <div class="hero-text">
                 </div>
