seed directory edit

--- a/gardensomething/seeds.html
+++ b/gardensomething/seeds.html
@@ -66,12 +66,12 @@
             </section>
         </header>
         <main class="main-content2">
-            <h1>Saratoga Chamber of Commerce Directory</h1>
+            <h1>Garden Something Seed Directory</h1>
             <section class="section-content">
-                <h2>Businesses in the Saratoga area</h2>
+                <h2>Our Favorite Seeds</h2>
                 <div class="view-toggle">
-                    <button id="gridViewBtn">Grid View</button>
-                    <button id="listViewBtn">List View</button>
+                    <button id="gridViewBtn">Zone 1-2</button>
+                    <button id="listViewBtn">Zone 3-4</button>
                 </div>
             </section>
             <section class="businesses">
