--- a/gardensomething/request.html
+++ b/gardensomething/request.html
@@ -41,7 +41,7 @@
         <link rel="preload" as="image" href="images/logo.webp">
         <header>
             <section class="top-header">
-                <h1 class="center-header">Request a quote from Garden Something</h1>
+                <h1 class="center-header">Request a Quote</h1>
                 <img src="images/logo.webp" alt="Garden Something Logo" class="logo">
                 <button id="menu-toggle" aria-label="Toggle menu">
                     &#9776;
