--- a/gardensomething/site-plan.html
+++ b/gardensomething/site-plan.html
@@ -60,7 +60,7 @@
         <section>
             <h2>user personas</h2>
             <p> 
-                Father: Ben is a 45 year old father of four who wants to grow some of his families food.  
+                Father: Ben is a 45 year old father of four who wants to grow some of his family's food.  
                 Student: Hannah is a 20 year old collage student who wants to grow things in a small space. 
             </p>
         </section>   
