changing stuff starting other stuff

--- a/gardensomething/index.html
+++ b/gardensomething/index.html
@@ -83,14 +83,14 @@
             </section>
             <section class= weather id="weather-section"> 
                 <h2>Weather</h2>
-                <p>This should display your weather from your current location.</p>
+                <h3 id="weather-city">Weather for your location</h3>
+                <p>Nice day to grow something. Take a look at your weather.</p>
                 <div id="current-weather"></div>
                 <h2>3-Day Forecast</h2>
                 <div id="three-day-forecast" class="forecast-grid"></div>
             </section>
             <section class="spotlights">
                 <h2>Company Spotlights</h2>
-            
             </section>
                 
         </main>
