--- a/gardensomething/thankyou.html
+++ b/gardensomething/thankyou.html
@@ -37,9 +37,11 @@
 
 <body>
     <div class="page-wrapper">
-        <header class="top-header">
-            <h1>Garden Something</h2>
-            <img src="images/logo.webp" alt="Garden Something Logo" class="logo">
+        <header>
+            <section class="top-header">
+                <h1 class="center-header">Garden Something</h2>
+                <img src="images/logo.webp" alt="Garden Something Logo" class="logo">
+            </section>
         </header>
         <main>
             <section class="section-content">
